# fastapi-app

./: .dockerignore  .env  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  time table1.sql  timetable_data.sql
.fastapicloud/: cloud.json  cloud.main.json  cloud.qa.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-qa.yml  deploy-vercel-qa.yml  deploy.yml  lint-and-build.yml  pr-check.yml  tests.yml
.husky/: pre-commit  pre-push
app/: __init__.py  database.py  main.py  models.py  scheduler.py  schemas.py  utils.py
app/controllers/: __init__.py  attendance.py  auth.py  class_student.py  fee_structure.py  fees.py  holiday.py  leave_request.py  school_class.py  staff.py  students.py  subjects.py  tasks.py  timetable.py
app/login/: index.html  page.tsx.html
app/models/: __init__.py  attendance.py  class_student.py  fee_payment.py  fee_structure.py  holiday.py  leave_request.py  school_class.py  staff.py  student.py  subject.py  task.py  timetable.py  user.py
app/routers/: __init__.py  attendance.py  auth.py  class_student.py  dashboard.py  fee_structure.py  fees.py  holiday.py  leave_request.py  public.py  school_class.py  staff.py  students.py  subjects.py  tasks.py  timetable.py
app/schemas/: __init__.py  attendance.py  class_student.py  fee_payment.py  fee_structure.py  holiday.py  leave_request.py  school_class.py  staff.py  student.py  subject.py  task.py  timetable.py  user.py
backend/: class_index.html  function_index.html  index.html  z_2e3eaab626e4e78a___init___py.html  z_2e3eaab626e4e78a_attendance_py.html  z_2e3eaab626e4e78a_auth_py.html  z_2e3eaab626e4e78a_class_student_py.html  z_2e3eaab626e4e78a_fee_structure_py.html  z_2e3eaab626e4e78a_fees_py.html  z_2e3eaab626e4e78a_holiday_py.html  z_2e3eaab626e4e78a_leave_request_py.html  z_2e3eaab626e4e78a_school_class_py.html  z_2e3eaab626e4e78a_staff_py.html  z_2e3eaab626e4e78a_students_py.html  z_2e3eaab626e4e78a_subjects_py.html  z_2e3eaab626e4e78a_tasks_py.html  z_2e3eaab626e4e78a_timetable_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_database_py.html  z_5f5a17c013354698_main_py.html  z_5f5a17c013354698_scheduler_py.html  z_5f5a17c013354698_utils_py.html  z_6549c0330f733809___init___py.html  z_6549c0330f733809_attendance_py.html  z_6549c0330f733809_auth_py.html  z_6549c0330f733809_class_student_py.html  z_6549c0330f733809_dashboard_py.html  z_6549c0330f733809_fee_structure_py.html  z_6549c0330f733809_fees_py.html  z_6549c0330f733809_holiday_py.html  z_6549c0330f733809_leave_request_py.html  z_6549c0330f733809_public_py.html  z_6549c0330f733809_school_class_py.html  z_6549c0330f733809_staff_py.html  z_6549c0330f733809_students_py.html  z_6549c0330f733809_subjects_py.html  z_6549c0330f733809_tasks_py.html  z_6549c0330f733809_timetable_py.html  z_6c0e4b930745278b___init___py.html  z_6c0e4b930745278b_attendance_py.html  (+26 more)
components/: CalendarPicker.tsx.html  ConfirmBox.tsx.html  DashboardLayout.tsx.html  SideNav.tsx.html  Table.tsx.html  ThemeToggle.tsx.html  TopNav.tsx.html  index.html
context/: AuthContext.tsx.html  GlobalContext.tsx.html  index.html
frontend/: eslint.config.mjs  jest.config.ts  lint_output.txt  lint_results.json  next.config.ts  package-lock.json  package.json
lib/: api.ts.html  departments.ts.html  index.html  permissions.ts.html  utils.ts.html
plann/: timt-table.md
pr-31/: index.html
pr-31/components/: CalendarPicker.tsx.html  (+7 more)
pr-32/: index.html
pr-33/: index.html
pr-34/: index.html
scripts/: auto_assign_class_teachers.py  class_asssgin.py  generate_timetable.py  generate_tt2.py  migrate_staff_to_user.py  seed_subjects.py  verify_timetable.py
tests/: conftest.py  test_attendance.py  test_classes.py  test_fee_structure.py  test_fees.py  test_holidays.py  test_leave_requests.py  test_main.py  test_staff.py  test_students.py  test_subjects.py  test_timetable.py
(+481 files in other folders)
